2004-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* configure.in: Added data/net_1_1 and data/net_2_0 to the build.
	* data/Makefile.am: Removed installation of machine.config and
	  DefaultWsdlHelpGenerator.aspx. Those now are in a version-specific
	  directory.
	* data/net_1_1/Makefile.am, data/net_2_0/Makefile.am: new makefiles for
	  installing 1.1 and 2.0 makefiles.
	* runtime/net_1_1/Makefile.am, runtime/net_2_0/Makefile.am: Install mscorlib
	  at the correct version specific directory.

2004-07-27  John Merryweather Cooper <john_m_cooper@yahoo.com>
	* configure.in: Disable __thread test (TLS) for FreeBSD as
	it succeeds on FreeBSD 5.x when it should fail.  Fix pthread
	library detection for FreeBSD 4.x since pthread is embedded
	in libc_r on this platform.  Fix some typos in my host
	regexes for freebsd.

2004-07-23  Dick Porter  <dick@ximian.com>

	* configure.in: Changes for FreeBSD thread support by John
	Merryweather Cooper <john_m_cooper@yahoo.com>.

2004-07-15  Jackson Harper  <jackson@ximian.com>

	* man/gacutil.1: MONO_GAC_PREFIX not MONO_GAC_PATH
	
2004-07-12  Massimiliano Mantione  <massi@ximian.com>

	* docs/abc-removal.txt: Updated documentation for ABC removal.

2004-07-12  Massimiliano Mantione  <massi@ximian.com>

	* mono/mini/abcremoval.c: Rewritten most of ABC removal.
	* mono/mini/abcremoval.h: Rewritten most of ABC removal.
	* mono/mini/build_relations_propagation_table.pl: Deleted (unneeded after the rewrite).
	* mono/mini/propagated_relations_table.def: Deleted (unneeded after the rewrite).

2004-07-03  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Add --with-tls option to replace the misnamed 
	--with-nptl option.

2004-07-02  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (mcs-do-basic-build, mcs-do-short-build):
	Pass NO_SIGN_ASSEMBLY=yes to sub-make.
	($(tmpinst)/bin/mono) [PLATFORM_WIN32]: Make it work.

2004-07-02  Zoltan Varga  <vargaz@freemail.hu>

	* man/mono.1: Added 'aot' to trace options.
